--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.carousel .control-arrow {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .carousel .control-prev.control-arrow {
+    left: -50px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .carousel .control-next.control-arrow {
+    right: -50px;
   }
-}
+  
+  .carousel .control-arrow:before {
+    font-size: 20px;
+    color: white;
+  }
+  
+  .carousel .control-disabled.control-arrow {
+    display: none;
+  }
+  
+  
